environment variables are documented in the help and man page.

Make onenetd work on ARM: correct a number of type errors in the code,
where it was using an inappropriate type to hold a return value from a
library function.

Fix an uninitialised variable use (spotted by clang).

Check that strdup hasn't failed when setting up the environment (spotted
by clang).

Add the -1 option.

- onenetd 1.11

Change the license from the GPL to the Expat license.

Use getsockname() to get the local address to put in TCPLOCALIP, rather
than just using the listen address; this means that TCPLOCALIP will be
set to the address of the interface the client connected to.

Document the environment variables. Reported by Tim Bishop.

Check that accept() returned a valid address.

Catch a (harmless) out-of-memory crash while parsing options.  Reported
by Ulf Härnhammar, who also did a security review of the code -- thanks!

Update the list of connected clients correctly; previously
clients weren't being added to the list at all, so memory would be
leaked if the refusal message wasn't accepted immediately, and the child
FD would be closed immediately anyway. Avoid overfilling fd_sets by
dropping client connections if they wouldn't fit.

- onenetd 1.10

Set fd options correctly (required for Solaris).

Block SIGCHLD except while select() is running.

Use a self-pipe again, since the other way is not correct (it leaves
zombies if the handler gets called early enough).

Use FD_CLOEXEC to avoid leaking fds.

Various cleanups.

- onenetd 1.9

Made all the errors that can occur in the main loop non-fatal.

- onenetd 1.8

Added -e to redirect stderr of child to socket.

Removed obsolete -o and -d from getopt args.

Wrote manual page.

- onenetd 1.7

Fixed bug where onenetd wouldn't accept any connections after it had
been full -- it was calculating "full" in the wrong place.

Made the disconnect message show the connection count after